# richcord

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
gamesdk/: CMakeLists.txt  README.md
gamesdk/lib/: README.md
gamesdk/src/: types.h
resources/stylesheets/: discord.qss
src/: main.cpp  version.h  version.rc
src/core/: activity.cpp  app.cpp  app.h  testing.cpp  testing.h
src/widget/: clickablelabel.cpp  clickablelabel.h
src/window/: mainwindow.cpp  mainwindow.h  mainwindow.ui
